@@ -1,3 +1,6 @@
+15 June 2007
+  addOption is now much faster when adding many options (no longer causing an 'unresponsive script' dialog box)
+
 22 May 2007
   Packed version available using Dean Edwards' Packer: http://dean.edwards.name/packer/
 
